# PonGL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
shaders/: fragment.glsl  fragment_text.glsl  vertex.glsl
src/: main.cpp
src/controller/: app.cpp  app.hpp
src/model/: rect.cpp  rect.hpp  scene.cpp  scene.hpp
src/view/: rect_mesh.cpp  rect_mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
